apps/pic/pic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pic
  labels:
    app: pic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pic
  template:
    metadata:
      labels:
        app: pic
    spec:
      containers:
        - name: pic
          image: ghcr.io/mathisdlmr/picstarplanet:4c55e17d34c08fdbd71498be13881bbfea31fc33
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
